command`.

** Lambdas in C
Lambdas are now correctly illegal in C.

** Nested `typedef`s
Fixed printing of `typedef`s of nested types, e.g.:

    c++decl> struct S { typedef int I; }
    c++decl> typedef typename S::I T
    c++decl> show
    typedef S::I T;

** `restrict` arrays
Arrays being `restrict` except as function parameter is now correctly illegal.

** Types in error & warning messages
For types that are `typedef`s, now printing `aka` followed by their underlying
types in more cases.

** Fixed escaped newlines
Fixed escaped newline handling when not using GNU readline.

** Fixed `q` command
Fixed having `q` be a synonym for `quit` in `infer-command` (formerly `explain-
by-default`) mode.


* Changes in Cdecl 15.0

** Coalesced `explain` output
Output from `explain` coalesces same-base-type declarations together, e.g.:

    cdecl> explain int x, *p, y
    declare x, y as integer
    declare p as pointer to integer

** Command help
The `help` command now accepts a **cdecl** command name and prints help for
only that command.

** Optional `unique_id` in dump output
By default, dumped AST JSON5 no longer includes `unique_id` values.  (This is
so diffs of debug output that differ only by `unique_id` don't cause tests to
fail.)

Correspondingly, the `-d` and `--debug` command-line options and the `debug`
`set` option now optionally take a `u` argment to re-enable printing
`unique_id` values (that are useful for debugging).

** `dup_from_id`
When dumping JSON5 output and `unique_id` values are included, an additional
`dup_from_id` value is now also printed. It is the `unique_id` of the AST node
the current node was duplicated from, if any.

** Dump in JSON5 (really)
The format of the dump output is now (really) in valid JSON5 format.

** More std types
Added more standard types.

** Folded `cast` help
Help for new-style casts has been folded into the same line for C-style casts.

** `--no-buffer-stdout` & `-b`